fix header ripple effect cause layout shift

--- a/src/pages/about/_styles/styles.module.scss
+++ b/src/pages/about/_styles/styles.module.scss
@@ -40,7 +40,11 @@
 }
 
 .header {
-	min-height: 128px;
+	min-height: 360px;
+	width: 100%;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
 }
 
 .hero {
@@ -48,6 +52,7 @@
 	gap: 32px;
 	align-items: flex-start;
 	padding: 16px;
+	padding-top: 128px;
 	justify-content: center;
 
 	@media (max-width: 700px) {
